--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -346,9 +346,9 @@ grids {
 
 <link href="https://fonts.googleapis.com/css?family=Baloo|Roboto+Condensed|Oswald:400,700|Roboto:400,400i,700" rel="stylesheet" type='text/css'>
 
-
+</head>
   <body>
-    <p style="text-align: center"><a class="newsletterLink" href="https://www.dropbox.com/s/33g8lvo3dkndfhj/YCNewsletterJAN2018.html?dl=0" target="_blank">View this email in your browser</a></p>
+    <p style="text-align: center"><a class="newsletterLink" href="https://modernmatter.github.io/Newsletter/YCNewsletterJAN2018.html" target="_blank">View this email in your browser</a></p>
     <div id="wrapper">
       <div id="google_translate_element"></div>
 <!-- Content for the header-->
