--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -375,7 +375,7 @@ grids {
         <hr class="style1">
          <h2>Ladders for Leaders Applications are now available! 🤑👔</h2>
           <hr class="style2">
-         <img src="./images/ladders_youth1.jpg" style="max-width:460px" class="bodyImage"/>
+         <img src="./images/Ladders_youth1.jpg" style="max-width:460px" class="bodyImage"/>
          <p>The NYC Ladders for Leaders Program gives students a unique opportunity to explore their interests and discover new ones through: 
            <ul><li><strong>Pre-employment Training:</strong> Receive help with r&#233;sum&#233; and cover letter writing, and interviewing skills. Learn essential workplace readiness skills and business etiquette.</li><br><li><strong>Paid Summer Internships:</strong> 💰 Paid internship opportunities available in a variety of industries to accommodate student interests.</li><br><li><strong>Opportunity to join our growing Alumni Network:</strong> Broad network of alumni, post-internship opportunities and networking events open only to past participants of the program.</li></ul>Visit our <a href="http://www1.nyc.gov/site/dycd/connected/yc-newsletter.page" target="_blank">website</a> for more eligibility and program information. </p>
         <hr class="style1">
@@ -467,7 +467,7 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
 }
 </script>
-<script type="text/javascript" src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript" src="http:s//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 
 
