--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -5,9 +5,87 @@
 	<title>NYC DYCD Youth Connect Newsletter</title>
 
 <style type="text/css">
+
+	/* respnsive css for tablets*/
+@media all and (max-width: 768px) {
+  #wrapper {
+    margin: auto;
+    max-width: 500px !important; 
+  }
+  #header { 
+    display: table !important;
+  }
+  #socialMedia {
+    display: table-footer-group !important;
+    text-align: left;
+  }
+  #dycdLogo {
+        display: table-header-group !important;
+  }
+  #headerMiddle{
+    display: table-row-group;
+    padding-top: 50px;
+    position: absolute;
+  }
+  #rightColumn,
+  #leftColumn {
+    display:block !important;
+    width:100% !important;
+  }
+  h1 {
+  font-size: 6em !important; 
+}
+.bodyImage {
+            height:auto !important;
+            width:100% !important;
+        }
+
+/* respnsive css for mobile phones*/
+@media all and (max-width: 640px) {
+  #wrapper {
+    margin: auto;
+    max-width: 460px !important; 
+  }
+  #header { 
+    display: table !important;
+  }
+  #socialMedia {
+    display: table-footer-group !important;
+    text-align: left;
+  }
+  #dycdLogo {
+        display: table-header-group !important;
+  }
+  #headerMiddle{
+    display: table-row-group;
+    padding-top: 50px;
+    position: absolute;
+  }
+  #rightColumn,
+  #leftColumn {
+    display:block !important;
+    width:100% !important;
+  }
+  h1 {
+  font-size: 6em !important; 
+}
+.bodyImage {
+            height:auto !important;
+            width:100% !important;
+        }
+  .fluidGrid {
+  display: grid !important;
+  grid-template-columns: repeat(1, 1fr) !important;
+}
+  .fluidGrid img {
+    max-width: 250px !important;
+    height: auto !important;
+  }
+}
+	
+/* regular desktop styles  */	
 	
 /* text styles */
-
 body {
   background: #FF8008;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to top, #FFC837, #FF8008);  /* Chrome 10-25, Safari 5.1-6 */
@@ -265,82 +343,7 @@ grids {
 }
 
 
-/* respnsive css for tablets*/
-@media all and (max-width: 768px) {
-  #wrapper {
-    margin: auto;
-    max-width: 500px !important; 
-  }
-  #header { 
-    display: table !important;
-  }
-  #socialMedia {
-    display: table-footer-group !important;
-    text-align: left;
-  }
-  #dycdLogo {
-        display: table-header-group !important;
-  }
-  #headerMiddle{
-    display: table-row-group;
-    padding-top: 50px;
-    position: absolute;
-  }
-  #rightColumn,
-  #leftColumn {
-    display:block !important;
-    width:100% !important;
-  }
-  h1 {
-  font-size: 6em !important; 
-}
-.bodyImage {
-            height:auto !important;
-            width:100% !important;
-        }
 
-/* respnsive css for mobile phones*/
-@media all and (max-width: 640px) {
-  #wrapper {
-    margin: auto;
-    max-width: 460px !important; 
-  }
-  #header { 
-    display: table !important;
-  }
-  #socialMedia {
-    display: table-footer-group !important;
-    text-align: left;
-  }
-  #dycdLogo {
-        display: table-header-group !important;
-  }
-  #headerMiddle{
-    display: table-row-group;
-    padding-top: 50px;
-    position: absolute;
-  }
-  #rightColumn,
-  #leftColumn {
-    display:block !important;
-    width:100% !important;
-  }
-  h1 {
-  font-size: 6em !important; 
-}
-.bodyImage {
-            height:auto !important;
-            width:100% !important;
-        }
-  .fluidGrid {
-  display: grid !important;
-  grid-template-columns: repeat(1, 1fr) !important;
-}
-  .fluidGrid img {
-    max-width: 250px !important;
-    height: auto !important;
-  }
-}
 
 </style>
 
