--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -268,10 +268,14 @@ grids {
 }
 
 	/* respnsive css for tablets*/
-@media only screen 
+/* @media only screen 
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
+  and (-webkit-min-device-pixel-ratio: 1) { */
+@media all 
+  and (min-width: 768px) 
+  and (max-width: 1024px) 
+  and (-webkit-min-pixel-ratio: 1) {
   #wrapper {
     margin: auto;
     max-width: 500px !important; 
