--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -268,17 +268,13 @@ grids {
 }
 
 	/* respnsive css for tablets*/
-/* @media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) { */
 @media all 
   and (min-width: 768px) 
   and (max-width: 1024px) 
   and (-webkit-min-pixel-ratio: 1) {
   #wrapper {
     margin: auto;
-    max-width: 500px !important; 
+    max-width: 600px !important; 
   }
   #header { 
     display: table !important;
@@ -310,10 +306,10 @@ grids {
 	}
 	
 /* respnsive css for mobile phones*/
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media all 
+  and (min-width: 320px) 
+  and (max-width: 568px)
+  and (-webkit-min-pixel-ratio: 2) {
   #wrapper {
     margin: auto;
     max-width: 460px !important; 
