--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -272,6 +272,9 @@ grids {
   and (min-width: 768px) 
   and (max-width: 1024px) 
   and (-webkit-min-pixel-ratio: 1) {
+	  body {
+	  align-items: center;
+	  }	  
   #wrapper {
     margin: auto;
     max-width: 600px !important; 
