--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -273,7 +273,7 @@ grids {
   and (max-width: 1024px) 
   and (-webkit-min-pixel-ratio: 1) {
 	  body {
-	  margin: auto;
+	  text-align: center;
 	  }	  
   #wrapper {
     margin: auto;
