--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -281,7 +281,7 @@ grids {
   }
   #socialMedia {
     display: table-footer-group !important;
-    text-align: left;
+    text-align: left !important;
   }
   #dycdLogo {
         display: table-header-group !important;
@@ -313,6 +313,7 @@ grids {
   #wrapper {
     margin: auto !important;
     max-width: 460px !important; 
+	display: block;  
   }
   #header { 
     display: table !important;
