--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -268,7 +268,7 @@ grids {
 }
 
 	/* respnsive css for tablets*/
-@media all 
+@media screen 
   and (min-width: 768px) 
   and (max-width: 1024px) 
   and (-webkit-min-pixel-ratio: 1) {
@@ -306,7 +306,7 @@ grids {
 	}
 	
 /* respnsive css for mobile phones*/
-@media all 
+@media screen 
   and (min-width: 320px) 
   and (max-width: 568px)
   and (-webkit-min-pixel-ratio: 2) {
