--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -306,10 +306,11 @@ grids {
 	}
 	
 /* respnsive css for mobile phones*/
-@media screen 
-  and (min-width: 320px) 
+@media only screen 
+/*   and (min-width: 320px)  */
   and (max-width: 568px)
-  and (-webkit-min-pixel-ratio: 2) {
+/*   and (-webkit-min-pixel-ratio: 2)  */
+{
   #wrapper {
     margin: auto !important;
     max-width: 460px !important; 
