--- a/YCNewsletterJAN2018.html
+++ b/YCNewsletterJAN2018.html
@@ -297,6 +297,16 @@ grids {
     max-width: 100% !important;
     height: auto !important;
   }
+  h2 {
+  font-size: 3.5em;
+     }
+    p,
+    ul {
+      font-size: 1.8em;
+      line-height: 1.5em;
+  }
+h3 {font-size: 2em;    
+    }
 }
 
 
@@ -321,6 +331,16 @@ grids {
             height: auto !important;
             max-width: 100% !important;
      }
+h2 {
+  font-size: 3.5em;
+     }
+    p,
+    ul {
+      font-size: 1.8em;
+      line-height: 1.5em;
+  }
+h3 {font-size: 2em;    
+    }
   }
 
 
